Issue edina/fieldtrip-authoring-tool/issues/34: Popup z-index altered so not above navbar

--- a/src/css/former.css
+++ b/src/css/former.css
@@ -415,7 +415,7 @@ tr.record{
 #popup_container{
     position: absolute;
     top: 0px;
-    z-index: 11000;
+    z-index: 1029;
     background: white;
     padding: 7px;
     width: 29%;
